--- a/assets/course.css
+++ b/assets/course.css
@@ -8764,7 +8764,7 @@ body.error-browser #error p {
 }
 .about header {
   box-shadow: inset 0 0 0 2000px rgba(160, 160, 160, 0.5);
-  background-image: url("../images/header-hero.jpeg");
+  background-image: url("../images/hero-data.jpg");
   height: 500px;
   width: 100%;
   -webkit-box-sizing: border-box;
